--- a/MyCalaulator/app/src/main/res/values/strings.xml
+++ b/MyCalaulator/app/src/main/res/values/strings.xml
@@ -5,15 +5,16 @@
     <string name="_8">8</string>
     <string name="_9">9</string>
     <string name="divide">/</string>
-    <string name="multi">multi</string>
+    <string name="multi">*</string>
     <string name="_6">6</string>
     <string name="_3">3</string>
     <string name="_2">2</string>
     <string name="_1">1</string>
-    <string name="subtract">subtract</string>
+    <string name="subtract">-</string>
     <string name="_4">4</string>
     <string name="_0">0</string>
     <string name="clr">CLR</string>
-    <string name="plus">plus</string>
+    <string name="plus">+</string>
     <string name="equl">=</string>
+    <string name="dot">.</string>
 </resources>
