--- a/MyExerciseApp/app/src/main/res/values/strings.xml
+++ b/MyExerciseApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyExerciseApp</string>
+    <string name="image">start image</string>
+    <string name="start">START</string>
 </resources>
